Реализованы CRUD операции и добавлен файл asciinema

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ packages = [
 project = "src.primitive_db.main:main"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 prompt = "^0.4.1"
+prettytable = "^3.16.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
