--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,12 @@ python = "^3.8"
 prettytable = "^3.16.0"
 prompt = "^0.4.1"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.1.15"
+autopep8 = "^2.3.2"
+
 [tool.poetry.scripts]
 database = "primitive_db.main:main"
-project = "primitive_db.main:main"
 
 [build-system]
 requires = ["poetry-core"]
